--- a/requirements.txt
+++ b/requirements.txt
@@ -7,16 +7,21 @@ Django==3.2.8
 django-debug-toolbar==3.2.2
 django-rest-swagger==2.2.0
 djangorestframework==3.12.4
+drf-yasg==1.20.0
 idna==3.3
+inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.0.2
 MarkupSafe==2.0.1
 openapi-codec==1.3.2
+packaging==21.0
 Pillow==8.4.0
 PyJWT==2.3.0
+pyparsing==2.4.7
 python-dotenv==0.19.1
 pytz==2021.3
 requests==2.26.0
+ruamel.yaml==0.17.16
 simplejson==3.17.5
 sqlparse==0.4.2
 twilio==7.1.0
