--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,5 @@ GitHub.sublime-settings
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
+
+smile-notification-firebase-adminsdk-7nong-7dc83c3962.json
