--- a/requirements.txt
+++ b/requirements.txt
@@ -65,6 +65,7 @@ Pillow==8.4.0
 prompt-toolkit==3.0.21
 proto-plus==1.19.7
 protobuf==3.19.1
+psycopg2==2.9.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.8.0
@@ -76,6 +77,7 @@ python-crontab==2.6.0
 python-dateutil==2.8.2
 python-dotenv==0.19.1
 pytz==2021.3
+redis==3.5.3
 requests==2.26.0
 rsa==4.7.2
 ruamel.yaml==0.17.16
@@ -87,6 +89,7 @@ sqlparse==0.4.2
 toml==0.10.2
 twilio==7.1.0
 Twisted==21.7.0
+twisted-iocpsupport==1.0.2
 txaio==21.2.1
 typing-extensions==3.10.0.2
 uritemplate==4.1.1
