--- a/requirements.txt
+++ b/requirements.txt
@@ -24,15 +24,18 @@ coreapi==2.3.3
 coreschema==0.0.4
 cryptography==35.0.0
 daphne==3.0.2
+defusedxml==0.7.1
+diff-match-patch==20200713
 Django==3.2.8
 django-celery-beat==2.2.1
 django-cors-headers==3.10.0
-django-debug-toolbar==3.2.2
+django-import-export==2.6.1
 django-rest-swagger==2.2.0
 django-timezone-field==4.2.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==5.0.0
 drf-yasg==1.20.0
+et-xmlfile==1.1.0
 fcm-django==1.0.5
 firebase-admin==5.1.0
 google-api-core==2.2.2
@@ -57,9 +60,12 @@ inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.0.2
 kombu==5.1.0
+MarkupPy==1.14
 MarkupSafe==2.0.1
 msgpack==1.0.2
+odfpy==1.4.1
 openapi-codec==1.3.2
+openpyxl==3.0.9
 packaging==21.0
 Pillow==8.4.0
 prompt-toolkit==3.0.21
@@ -77,6 +83,7 @@ python-crontab==2.6.0
 python-dateutil==2.8.2
 python-dotenv==0.19.1
 pytz==2021.3
+PyYAML==6.0
 redis==3.5.3
 requests==2.26.0
 rsa==4.7.2
@@ -86,6 +93,7 @@ service-identity==21.1.0
 simplejson==3.17.5
 six==1.16.0
 sqlparse==0.4.2
+tablib==3.1.0
 toml==0.10.2
 twilio==7.1.0
 Twisted==21.7.0
@@ -96,4 +104,6 @@ uritemplate==4.1.1
 urllib3==1.26.7
 vine==5.0.0
 wcwidth==0.2.5
+xlrd==2.0.1
+xlwt==1.3.0
 zope.interface==5.4.0
