--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ django-rest-swagger==2.2.0
 django-timezone-field==4.2.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==5.0.0
+drf-extra-fields==3.2.1
 drf-yasg==1.20.0
 et-xmlfile==1.1.0
 fcm-django==1.0.5
@@ -68,6 +69,7 @@ openapi-codec==1.3.2
 openpyxl==3.0.9
 packaging==21.0
 Pillow==8.4.0
+pip==21.3.1
 prompt-toolkit==3.0.21
 proto-plus==1.19.7
 protobuf==3.19.1
@@ -90,6 +92,7 @@ rsa==4.7.2
 ruamel.yaml==0.17.16
 ruamel.yaml.clib==0.2.6
 service-identity==21.1.0
+setuptools==58.3.0
 simplejson==3.17.5
 six==1.16.0
 sqlparse==0.4.2
@@ -104,6 +107,7 @@ uritemplate==4.1.1
 urllib3==1.26.7
 vine==5.0.0
 wcwidth==0.2.5
+wheel==0.37.0
 xlrd==2.0.1
 xlwt==1.3.0
 zope.interface==5.4.0
