--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,7 @@
 version: '3.9'
 services:
+  qgis:
+    image: qgis/qgis:latest
   app:
     build: .
     restart: always
@@ -10,8 +12,9 @@ services:
       - "8000:8000"
     volumes:
       - ./app:/app
-  qgis:
-    image: qgis/qgis:latest
+    depends_on:
+      - qgis
+
   redis:
     image: redis:alpine
   celery:
