--- a/requirements.txt
+++ b/requirements.txt
@@ -73,7 +73,7 @@ pip==21.3.1
 prompt-toolkit==3.0.21
 proto-plus==1.19.7
 protobuf==3.19.1
-psycopg2==2.9.1
+psycopg2-binary
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.8.0
@@ -100,7 +100,6 @@ tablib==3.1.0
 toml==0.10.2
 twilio==7.1.0
 Twisted==21.7.0
-twisted-iocpsupport==1.0.2
 txaio==21.2.1
 typing-extensions==3.10.0.2
 uritemplate==4.1.1
