--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,27 @@ services:
 
   app:
     build: .
-    restart: always
+    restart: on-failure
     env_file:
       - ".env"
-    command: python manage.py migrate && python manage.py runserver 0.0.0.0:8000
+    command: python manage.py runserver 0.0.0.0:8000
     ports:
       - "8000:8000"
     volumes:
-      - ./app:/app
-
+      - .:/app
+    depends_on:
+      - postgres-db
+  postgres-db:
+      image: kartoza/postgis:12.0
+      ports:
+         - 5432:5432
+      volumes:
+         - postgres_data:/var/lib/postgresql
+      environment:
+         - POSTGRES_USER=${POSTGRES_USER}
+         - POSTGRES_PASS=${POSTGRES_PASS}
+         - POSTGRES_DBNAME=${POSTGRES_DBNAME}
+      restart: "on-failure"
   redis:
     image: redis:alpine
   celery:
@@ -20,7 +32,7 @@ services:
       context: .
     command: celery -A smile worker -l info
     volumes:
-      - ./app:/app
+      - .:/app
     env_file:
       - ./.env
     depends_on:
@@ -30,6 +42,8 @@ services:
   celery-beat:
     build: .
     restart: always
+    env_file:
+      - ./.env
     command: celery -A smile beat -l info
     volumes:
       - ./celerydata/beat/:/usr/src/app/
@@ -40,3 +54,7 @@ services:
     depends_on:
       - redis
       - celery
+
+
+volumes:
+   postgres_data:
