--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
       restart: "on-failure"
   redis:
     image: redis:alpine
+    ports:
+      - 6379:6379
   celery:
     restart: always
     build:
